increasing font-size in input and select elements to avoid zoom on mobile

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,3 +18,10 @@ code {
 .card {
   border-radius: 0;
 }
+
+@media screen and (max-width: 575px) {
+  input,
+  select {
+    font-size: 1.5rem !important;
+  }
+}
